Move project files to packeges, add content description for ImageView

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">CatFacts</string>
     <string name="fact_number">Fact #%d</string>
+    <string name="image_view_desc">Cat photo</string>
 </resources>
